# OverhearOps

./: .gitignore  .pre-commit-config.yaml  NEXT_STEPS.md  Procfile.dev  README.md  Taskfile.yml  package-lock.json  package.json  pyproject.toml
.codex/: PLANS.md  RELEASE_TRACKER.md  SCRATCHPAD.md
.github/workflows/: security.yml
apps/service/: main.py  queue_store.py  replay.py  retention.py  runtime_config.py  storage_codec.py  usage_meter.py
apps/service/adapters/: teams_demo.py  teams_graph.py
apps/service/api/: __init__.py
apps/ui/: next.config.mjs  package.json  playwright.config.ts  tsconfig.json
apps/ui/app/: globals.css  layout.tsx  page.tsx
apps/ui/components/: Graph.tsx  Modal.tsx  PlanExplorer.tsx  (+3 more)
config/: policy_rules.json  prompt_registry.json  runtime_settings.json
docs/: APPENDIX_DEMO_DECK.md  ARCHITECTURE.md  EVALS.md  PRD-overhearops.md  RESEARCH.yml  RISK-REGISTER.md  TEAMS-ADAPTER.md  api-v1.md
docs/ops/: alerts.yaml  benchmark.md  canary-rollout.md  dr-backup-restore.md  incident-runbook.md  release-notes-2026-03-03.md  release-readiness.md  slo.md
docs/plans/: 2026-02-02-overhearops-demo-excellence-design.md  2026-02-02-overhearops-demo-excellence.md  2026-02-03-overhearops-hardening-design.md  2026-02-03-overhearops-hardening.md
docs/security/: pentest-checklist.md  secret-management.md  trust-center.md
infra/: docker-compose.yaml  otel-collector.yaml  tempo.yaml
infra/grafana/: overhearops-release-dashboard.json
scripts/: backup_restore.py  benchmark_scorecard.py  canary_rollout.py  cleanup_runs.py  export_evidence_bundle.py  integration_health_check.py  load_soak.py  probe_public_status.py  release_gate.sh  replay_dlq.py
tests/: conftest.py  test_action_graph.py  test_adapter_seam.py  test_agentinit.py  test_api_payload.py  test_branch_exec.py  test_defence.py  test_determinism.py  test_e2e.py  test_gate_ship.py  test_graph_adapter_live.py  test_graphs.py  test_judge_uncertainty.py  test_overhear.py  test_planner_executor.py  test_planner_judge_provider.py  test_provider_offline.py  test_provider_runtime.py  test_queue_dlq.py  test_release_controls.py  test_replay.py  test_replay_endpoint.py  test_replay_hash.py  test_retention_cleanup.py  test_run_lifecycle.py  test_runtime_config_and_history.py  test_runtime_context.py  test_security_scenario.py  test_storage_codec.py  test_thread_events.py
tests/evals/: test_regression_evals.py
tests/perf/: README.md
tests/security/: test_adversarial_pack.py
(+14 files in other folders)
