[project]
name = "overhearops"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.1",
  "uvicorn[standard]>=0.47",
  "pydantic>=2.8",
  "langgraph>=1.2.0",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "opentelemetry-sdk>=1.26",
  "opentelemetry-exporter-otlp>=1.26",
  "httpx>=0.27",
  "rich>=13.7",
  "pytest>=9.0.3",
  "ruff>=0.6.4",
  "mypy>=1.11",
  "python-dotenv>=1.2.2",
  "orjson>=3.11.9",
  "honcho>=1.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["apps", "packages"]
include = ["service*", "agentkit*", "obs*"]

[tool.uv]
package = true
prerelease = "allow"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"apps/service/replay.py" = ["S311"]
"packages/agentkit/sqlite_checkpoint.py" = ["S301", "S403"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
mypy_path = ["packages", "apps"]

[tool.coverage.run]
branch = true
source = ["apps", "packages"]
